--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2653,6 +2653,12 @@ config MSM_VP_REGULATOR
 config HAVE_ARCH_HAS_CURRENT_TIMER
 	bool
 
+config ENABLE_MIN_KRAIT_VOLTAGE
+	bool "Enable min CPU Voltage"
+	default n
+	help
+	  Krait min Votlage bug
+
 config MSM_CACHE_DUMP
 	bool "Cache dumping support"
 	help
