--- a/arch/arm/configs/cyanogen_d2_defconfig
+++ b/arch/arm/configs/cyanogen_d2_defconfig
@@ -1721,6 +1721,7 @@ CONFIG_LEGACY_PTY_COUNT=256
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
+CONFIG_FRANDOM=y 
 
 #
 # Serial drivers
