d2: defconfig: build frandom in by default Signed-off-by: Luis Cruz <ljc2491@gmail.com>

--- a/arch/arm/configs/cyanogen_d2att_defconfig
+++ b/arch/arm/configs/cyanogen_d2att_defconfig
@@ -1735,6 +1735,7 @@ CONFIG_LEGACY_PTY_COUNT=256
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
