--- a/init/Kconfig
+++ b/init/Kconfig
@@ -60,6 +60,37 @@ config EXPERIMENTAL
 	  you say Y here, you will be offered the choice of using features or
 	  drivers that are currently considered to be in the alpha-test phase.
 
+choice
+	prompt "Zen-Tune Profile"
+	default ZEN_CUSTOM
+	---help---
+	  Select the tunable profile to be used.
+
+config ZEN_DEFAULT
+	bool "Default"
+	---help---
+	  This option sets tunables to default.
+
+	    DIRTY_RATIO: 20
+	    BACKGROUND_DIRTY_RATIO: 10
+	    SCHED LATENCY: 6 ms
+	    SCHED LATENCY GRANULARITY: 0.75 ms
+
+
+config ZEN_CUSTOM
+	bool "Custom"
+	---help---
+	  This option sets tunables to optimal desktop values.
+	  Changes to these values can be adjusted in include/linux/zentune.h
+
+	    DIRTY_RATIO: 1
+	    BACKGROUND_DIRTY_RATIO: 10
+	    SCHED LATENCY: 3 ms
+	    SCHED LATENCY GRANULARITY: 0.3 ms
+
+
+endchoice
+
 config BROKEN
 	bool
 
