--- a/arch/arm/configs/cyanogen_d2att_defconfig
+++ b/arch/arm/configs/cyanogen_d2att_defconfig
@@ -41,6 +41,7 @@ CONFIG_IRQ_WORK=y
 # General setup
 #
 CONFIG_EXPERIMENTAL=y
+CONFIG_ZEN_CUSTOM=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-modified-cm_Harkness_A3-21"
