--- a/arch/arm/configs/cyanogen_d2_defconfig
+++ b/arch/arm/configs/cyanogen_d2_defconfig
@@ -5,7 +5,6 @@
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
-CONFIG_MIGHT_HAVE_PCI=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_GENERIC_GPIO=y
 # CONFIG_ARCH_USES_GETTIMEOFFSET is not set
@@ -86,7 +85,7 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
@@ -217,7 +216,7 @@ CONFIG_EFI_PARTITION=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=m
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
@@ -386,9 +385,6 @@ CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
 CONFIG_MSM_AMSS_VERSION_6225=y
-CONFIG_MSM_HAS_DEBUG_UART_HS=y
-CONFIG_DEBUG_MSM8960_UART=y
-# CONFIG_DEBUG_APQ8064_UART is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
@@ -405,11 +401,7 @@ CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE=y
 CONFIG_MSM7X00A_IDLE_SLEEP_MODE=1
 CONFIG_MSM7X00A_IDLE_SLEEP_MIN_TIME=20000000
 CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
-CONFIG_MSM_IDLE_STATS=y
-CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
-CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
-CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
-CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
+# CONFIG_MSM_IDLE_STATS is not set
 CONFIG_CPU_HAS_L2_PMU=y
 # CONFIG_HTC_HEADSET is not set
 # CONFIG_HTC_PWRSINK is not set
@@ -419,12 +411,12 @@ CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_MSM_SMD=y
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_RESET_MODEM=m
-CONFIG_MSM_SMD_LOGGING=y
+# CONFIG_MSM_SMD_LOGGING is not set
 # CONFIG_MSM_IPC_LOGGING is not set
 CONFIG_MSM_SMD_NMEA=y
 # CONFIG_MSM_HSIC_TTY is not set
@@ -444,10 +436,10 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
-CONFIG_MSM_DMA_TEST=m
+# CONFIG_MSM_DMA_TEST is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
-CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
+# CONFIG_MSM_SLEEP_TIME_OVERRIDE is not set
 # CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
@@ -474,10 +466,10 @@ CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
 # CONFIG_SEC_SSR_DUMP is not set
 # CONFIG_MSM_GSS_SSR_8064 is not set
-CONFIG_MSM_BUSPM_DEV=m
-CONFIG_MSM_TZ_LOG=y
-CONFIG_MSM_RPM_LOG=y
-CONFIG_MSM_RPM_STATS_LOG=y
+# CONFIG_MSM_BUSPM_DEV is not set
+# CONFIG_MSM_TZ_LOG is not set
+# CONFIG_MSM_RPM_LOG is not set
+# CONFIG_MSM_RPM_STATS_LOG is not set
 # CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_MSM_GPIOMUX=y
@@ -1549,7 +1541,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+# CONFIG_INPUT_EVBUG is not set
 # CONFIG_INPUT_KEYRESET is not set
 
 #
@@ -3457,8 +3449,8 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
