d2: defconfig: strip another module/some debugging
from: https://github.com/DecimalMan/dkp/commit/c20c66b9f2ba428d6d6cc0fddeda5b2595000a4f
Signed-off-by: Luis Cruz <ljc2491@gmail.com>

--- a/arch/arm/configs/cyanogen_d2_defconfig
+++ b/arch/arm/configs/cyanogen_d2_defconfig
@@ -2120,7 +2120,6 @@ CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
 # CONFIG_MFD_TPS65090 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
-CONFIG_MFD_PM8XXX_DEBUG=y
 CONFIG_MFD_PM8XXX_PWM=y
 CONFIG_MFD_PM8XXX_MISC=y
 CONFIG_MFD_PM8XXX_SPK=y
@@ -2704,7 +2703,7 @@ CONFIG_HID_TWINHAN=y
 CONFIG_HID_KENSINGTON=y
 # CONFIG_HID_LCPOWER is not set
 CONFIG_HID_LOGITECH=y
-CONFIG_HID_LOGITECH_DJ=m
+# CONFIG_HID_LOGITECH_DJ is not set
 # CONFIG_LOGITECH_FF is not set
 # CONFIG_LOGIRUMBLEPAD2_FF is not set
 # CONFIG_LOGIG940_FF is not set
@@ -3410,7 +3409,7 @@ CONFIG_FRAME_WARN=1024
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_DEBUG_KERNEL=y
@@ -3427,7 +3426,7 @@ CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 # CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
@@ -3535,7 +3534,7 @@ CONFIG_PID_IN_CONTEXTIDR=y
 #
 CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
-CONFIG_KEYS_DEBUG_PROC_KEYS=y
+# CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 # CONFIG_SECURITYFS is not set
 CONFIG_CRYPTO=y
