--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -1248,6 +1248,8 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 #
 CONFIG_SOUND_CONTROL=y
 CONFIG_GAMMA_CONTROL=y
+CONFIG_SOUND_CONTROL_HAX_GPL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SENSORS_LIS3LV02D is not set
 # CONFIG_AD525X_DPOT is not set
 CONFIG_ANDROID_PMEM=y
